# l-t-ipms

./: .env.example  .gitignore  README.md  Working_Paper.md  agent_bulk_test_report.xlsx  agent_bulk_test_report_01.xlsx  app.py  config.py  generate_graph.py  generate_ingest.py  ingest.py  main.py  pyproject.toml  redis_client.py  requirements.txt  schemas.py  test.py  test_dataset.py  view_data.py
agent/: __init__.py  bulk_test_tools.py  bulk_test_tools_01.py  graph.py  llm.py  message_pruner.py  old_tools.py  streaming.py  test_graph.py  test_tools.py  tools.py
api/: __init__.py
api/v1/: __init__.py
api/v1/admin/: router.py
api/v1/chat/: __init__.py  router.py
api/v1/header/: __init__.py  router.py
api/v1/sidebar/: __init__.py  router.py
auth/: __init__.py  dependencies.py  seed.py  utils.py
cache/: __init__.py  redis_cache.py
db/: __init__.py
dtos/: models.py
frontend/: build_errors.txt  build_output.txt  build_result.txt  dev_output.txt  middleware.ts  npm_output.txt  package-lock.json  package.json  tailwind.config.ts
frontend/actions/: auth.ts  useAdminDashboard.ts  useChat.ts  useConversations.ts  useProjects.ts  useWebSocket.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(user)/: layout.tsx
frontend/components/: ChatContainer.tsx  ChatHeader.tsx  LoadingSpinner.tsx  MessageActions.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx
frontend/components/ui/: sidebar.tsx
frontend/components/user/: AuthButton.tsx  (+2 more)
frontend/lib/: api.ts  auth-client.ts  queryClient.ts  types.ts
prisma/: schema.prisma
(+3 files in other folders)
