[project]
name = "ipms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "groq>=0.31.0",
    "gunicorn>=23.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.3.7",
    "langchain-openai==0.3.13",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-redis>=0.3.2",
    "langgraph-supervisor>=0.0.28",
    "pandas>=2.3.3",
    "prisma>=0.15.0",
    "psycopg-binary>=3.3.2",
    "pydantic[email]>=2.12.5",
    "redis>=7.1.0",
    "tavily-python>=0.7.17",
    "uvicorn[standard]>=0.40.0",
]
